// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Для шильдиков с no_model=true отрисовало только шильдик 1`] = `
<div
  className="CrossLinks__wrapper"
>
  <div
    className="CrossLinks__linkWrapper"
    key="CrossLinks_CATALOG"
  >
    <Link
      className="CrossLinks__link"
      disableSpa={false}
      metrikaParams="downblock_links,FORD_C_MAX,link/catalog-generation-listing/?mark=FORD&model=C_MAX"
      url="link/catalog-generation-listing/?mark=FORD&model=C_MAX"
    >
      Каталог Ford C-MAX
    </Link>
  </div>
  <div
    className="CrossLinks__linkWrapper"
    key="CrossLinks_LISTING_USED"
  >
    <Link
      className="CrossLinks__link"
      disableSpa={true}
      metrikaParams="downblock_links,FORD_C_MAX,link/listing/?mark=FORD&model=C_MAX&section=used"
      url="link/listing/?mark=FORD&model=C_MAX&section=used"
    >
      Ford C-MAX с пробегом
    </Link>
  </div>
  <div
    className="CrossLinks__linkWrapper"
    key="CrossLinks_LISTING_NEW"
  >
    <Link
      className="CrossLinks__link"
      disableSpa={true}
      metrikaParams="downblock_links,FORD_C_MAX,link/listing/?mark=FORD&model=C_MAX&section=new"
      url="link/listing/?mark=FORD&model=C_MAX&section=new"
    >
      Новые Ford C-MAX
    </Link>
  </div>
  <div
    className="CrossLinks__linkWrapper"
    key="CrossLinks_REVIEWS"
  >
    <Link
      className="CrossLinks__link"
      disableSpa={false}
      metrikaParams="downblock_links,FORD_C_MAX,linkDesktop/reviews-listing-cars/?mark=FORD&model=C_MAX&parent_category=cars"
      url="linkDesktop/reviews-listing-cars/?mark=FORD&model=C_MAX&parent_category=cars"
    >
      Отзывы о Ford C-MAX
    </Link>
  </div>
  <div
    className="CrossLinks__linkWrapper"
    key="CrossLinks_STATS"
  >
    <Link
      className="CrossLinks__link"
      disableSpa={false}
      metrikaParams="downblock_links,FORD_C_MAX,link/stats/?mark=FORD&model=C_MAX"
      url="link/stats/?mark=FORD&model=C_MAX"
    >
      Статистика цен Ford C-MAX
    </Link>
  </div>
  <div
    className="CrossLinks__linkWrapper"
    key="CrossLinks_POFFER"
  >
    <Link
      className="CrossLinks__link"
      disableSpa={false}
      metrikaParams="downblock_links,FORD_C_MAX,linkDesktop/form-mmm/?category=cars&section=used&form_type=add&mark=FORD&model=C_MAX"
      url="linkDesktop/form-mmm/?category=cars&section=used&form_type=add&mark=FORD&model=C_MAX"
    >
      Продать Ford C-MAX
    </Link>
  </div>
  <div
    className="CrossLinks__linkWrapper"
    key="CrossLinks_NAMEPLATE_TAGS_9264570"
  >
    <Link
      className="CrossLinks__link"
      disableSpa={false}
      metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX%2Cnameplate_name%3Dgrand&section=all&category=cars"
      url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX%2Cnameplate_name%3Dgrand&section=all&category=cars"
    >
      Ford Grand C-MAX
    </Link>
  </div>
</div>
`;

exports[`Рендерит полный блок CrossLinks - all 1`] = `
<div
  className="CrossLinks CrossLinks_columns_3"
>
  <h3
    className="CrossLinks__title"
  >
    Всё о Ford C-MAX
  </h3>
  <div
    className="CrossLinks__rating"
  >
    Рейтинг модели
     — 
    4.7
     
    /
     
    5
  </div>
  <div
    className="CrossLinks__wrapper"
  >
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_CATALOG"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/catalog-generation-listing/?mark=FORD&model=C_MAX"
        url="link/catalog-generation-listing/?mark=FORD&model=C_MAX"
      >
        Каталог Ford C-MAX
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_LISTING_USED"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={true}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?mark=FORD&model=C_MAX&section=used"
        url="link/listing/?mark=FORD&model=C_MAX&section=used"
      >
        Ford C-MAX с пробегом
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_LISTING_NEW"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={true}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?mark=FORD&model=C_MAX&section=new"
        url="link/listing/?mark=FORD&model=C_MAX&section=new"
      >
        Новые Ford C-MAX
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_REVIEWS"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,linkDesktop/reviews-listing-cars/?mark=FORD&model=C_MAX&parent_category=cars"
        url="linkDesktop/reviews-listing-cars/?mark=FORD&model=C_MAX&parent_category=cars"
      >
        Отзывы о Ford C-MAX
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_STATS"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/stats/?mark=FORD&model=C_MAX"
        url="link/stats/?mark=FORD&model=C_MAX"
      >
        Статистика цен Ford C-MAX
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_POFFER"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,linkDesktop/form-mmm/?category=cars&section=used&form_type=add&mark=FORD&model=C_MAX"
        url="linkDesktop/form-mmm/?category=cars&section=used&form_type=add&mark=FORD&model=C_MAX"
      >
        Продать Ford C-MAX
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_ENGINE_TAGS_FORD_C_MAX_GASOLINE"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&engine_group=GASOLINE"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&engine_group=GASOLINE"
      >
        Ford C-MAX с бензиновым двигателем
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_ENGINE_TAGS_FORD_C_MAX_DIESEL"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&engine_group=DIESEL"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&engine_group=DIESEL"
      >
        Ford C-MAX с дизельным двигателем
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_DISPLACEMENT_TAGS_BMW_3.0"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&displacement_from=3000&displacement_to=3000"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&displacement_from=3000&displacement_to=3000"
      >
        Ford C-MAX 3.0л
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_DISPLACEMENT_TAGS_BMW_4.0"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&displacement_from=4000&displacement_to=4000"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&displacement_from=4000&displacement_to=4000"
      >
        Ford C-MAX 4.0л
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_SEATS_TAGS_BMW_2"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&catalog_equipment=seats-2"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&catalog_equipment=seats-2"
      >
        Ford C-MAX 2-местный
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_showAllBtn"
    >
      <Link
        className="CrossLinks__link"
        onClick={[Function]}
      >
        Показать все — 
        14
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper CrossLinks__linkWrapper_hidden"
      key="CrossLinks_SEATS_TAGS_BMW_5"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&catalog_equipment=seats-5"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&catalog_equipment=seats-5"
      >
        Ford C-MAX 5-местный
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper CrossLinks__linkWrapper_hidden"
      key="CrossLinks_BODY_TAGS_FORD_COUPE"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&body_type_group=COUPE"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&body_type_group=COUPE"
      >
        Ford C-MAX купе
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper CrossLinks__linkWrapper_hidden"
      key="CrossLinks_BODY_TAGS_FORD_SEDAN"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&body_type_group=SEDAN"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&body_type_group=SEDAN"
      >
        Ford C-MAX седан
      </Link>
    </div>
  </div>
</div>
`;

exports[`Рендерит полный блок CrossLinks - new 1`] = `
<div
  className="CrossLinks CrossLinks_columns_3"
>
  <h3
    className="CrossLinks__title"
  >
    Всё о Ford C-MAX
  </h3>
  <div
    className="CrossLinks__rating"
  >
    Рейтинг модели
     — 
    4.7
     
    /
     
    5
  </div>
  <div
    className="CrossLinks__wrapper"
  >
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_CATALOG"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/catalog-generation-listing/?mark=FORD&model=C_MAX"
        url="link/catalog-generation-listing/?mark=FORD&model=C_MAX"
      >
        Каталог Ford C-MAX
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_LISTING_USED"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={true}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?mark=FORD&model=C_MAX&section=used"
        url="link/listing/?mark=FORD&model=C_MAX&section=used"
      >
        Ford C-MAX с пробегом
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_LISTING_NEW"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={true}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?mark=FORD&model=C_MAX&section=new"
        url="link/listing/?mark=FORD&model=C_MAX&section=new"
      >
        Новые Ford C-MAX
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_REVIEWS"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,linkDesktop/reviews-listing-cars/?mark=FORD&model=C_MAX&parent_category=cars"
        url="linkDesktop/reviews-listing-cars/?mark=FORD&model=C_MAX&parent_category=cars"
      >
        Отзывы о Ford C-MAX
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_STATS"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/stats/?mark=FORD&model=C_MAX"
        url="link/stats/?mark=FORD&model=C_MAX"
      >
        Статистика цен Ford C-MAX
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_POFFER"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,linkDesktop/form-mmm/?category=cars&section=used&form_type=add&mark=FORD&model=C_MAX"
        url="linkDesktop/form-mmm/?category=cars&section=used&form_type=add&mark=FORD&model=C_MAX"
      >
        Продать Ford C-MAX
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_ENGINE_TAGS_FORD_C_MAX_GASOLINE"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&engine_group=GASOLINE"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&engine_group=GASOLINE"
      >
        Новые Ford C-MAX с бензиновым двигателем
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_ENGINE_TAGS_FORD_C_MAX_DIESEL"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&engine_group=DIESEL"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&engine_group=DIESEL"
      >
        Новые Ford C-MAX с дизельным двигателем
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_DISPLACEMENT_TAGS_BMW_3.0"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&displacement_from=3000&displacement_to=3000"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&displacement_from=3000&displacement_to=3000"
      >
        Новые Ford C-MAX 3.0л
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_DISPLACEMENT_TAGS_BMW_4.0"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&displacement_from=4000&displacement_to=4000"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&displacement_from=4000&displacement_to=4000"
      >
        Новые Ford C-MAX 4.0л
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_SEATS_TAGS_BMW_2"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&catalog_equipment=seats-2"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&catalog_equipment=seats-2"
      >
        Новые Ford C-MAX 2-местный
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_showAllBtn"
    >
      <Link
        className="CrossLinks__link"
        onClick={[Function]}
      >
        Показать все — 
        14
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper CrossLinks__linkWrapper_hidden"
      key="CrossLinks_SEATS_TAGS_BMW_5"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&catalog_equipment=seats-5"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&catalog_equipment=seats-5"
      >
        Новые Ford C-MAX 5-местный
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper CrossLinks__linkWrapper_hidden"
      key="CrossLinks_BODY_TAGS_FORD_COUPE"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&body_type_group=COUPE"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&body_type_group=COUPE"
      >
        Новые Ford C-MAX купе
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper CrossLinks__linkWrapper_hidden"
      key="CrossLinks_BODY_TAGS_FORD_SEDAN"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&body_type_group=SEDAN"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&body_type_group=SEDAN"
      >
        Новые Ford C-MAX седан
      </Link>
    </div>
  </div>
</div>
`;

exports[`Рендерит полный блок CrossLinks - used 1`] = `
<div
  className="CrossLinks CrossLinks_columns_3"
>
  <h3
    className="CrossLinks__title"
  >
    Всё о Ford C-MAX
  </h3>
  <div
    className="CrossLinks__rating"
  >
    Рейтинг модели
     — 
    4.7
     
    /
     
    5
  </div>
  <div
    className="CrossLinks__wrapper"
  >
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_CATALOG"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/catalog-generation-listing/?mark=FORD&model=C_MAX"
        url="link/catalog-generation-listing/?mark=FORD&model=C_MAX"
      >
        Каталог Ford C-MAX
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_LISTING_USED"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={true}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?mark=FORD&model=C_MAX&section=used"
        url="link/listing/?mark=FORD&model=C_MAX&section=used"
      >
        Ford C-MAX с пробегом
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_LISTING_NEW"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={true}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?mark=FORD&model=C_MAX&section=new"
        url="link/listing/?mark=FORD&model=C_MAX&section=new"
      >
        Новые Ford C-MAX
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_REVIEWS"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,linkDesktop/reviews-listing-cars/?mark=FORD&model=C_MAX&parent_category=cars"
        url="linkDesktop/reviews-listing-cars/?mark=FORD&model=C_MAX&parent_category=cars"
      >
        Отзывы о Ford C-MAX
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_STATS"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/stats/?mark=FORD&model=C_MAX"
        url="link/stats/?mark=FORD&model=C_MAX"
      >
        Статистика цен Ford C-MAX
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_POFFER"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,linkDesktop/form-mmm/?category=cars&section=used&form_type=add&mark=FORD&model=C_MAX"
        url="linkDesktop/form-mmm/?category=cars&section=used&form_type=add&mark=FORD&model=C_MAX"
      >
        Продать Ford C-MAX
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_ENGINE_TAGS_FORD_C_MAX_GASOLINE"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&engine_group=GASOLINE"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&engine_group=GASOLINE"
      >
        Ford C-MAX с бензиновым двигателем c пробегом
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_ENGINE_TAGS_FORD_C_MAX_DIESEL"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&engine_group=DIESEL"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&engine_group=DIESEL"
      >
        Ford C-MAX с дизельным двигателем c пробегом
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_DISPLACEMENT_TAGS_BMW_3.0"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&displacement_from=3000&displacement_to=3000"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&displacement_from=3000&displacement_to=3000"
      >
        Ford C-MAX 3.0л c пробегом
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_DISPLACEMENT_TAGS_BMW_4.0"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&displacement_from=4000&displacement_to=4000"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&displacement_from=4000&displacement_to=4000"
      >
        Ford C-MAX 4.0л c пробегом
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_SEATS_TAGS_BMW_2"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&catalog_equipment=seats-2"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&catalog_equipment=seats-2"
      >
        Ford C-MAX 2-местный c пробегом
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper"
      key="CrossLinks_showAllBtn"
    >
      <Link
        className="CrossLinks__link"
        onClick={[Function]}
      >
        Показать все — 
        14
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper CrossLinks__linkWrapper_hidden"
      key="CrossLinks_SEATS_TAGS_BMW_5"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&catalog_equipment=seats-5"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&catalog_equipment=seats-5"
      >
        Ford C-MAX 5-местный c пробегом
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper CrossLinks__linkWrapper_hidden"
      key="CrossLinks_BODY_TAGS_FORD_COUPE"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&body_type_group=COUPE"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&body_type_group=COUPE"
      >
        Ford C-MAX купе c пробегом
      </Link>
    </div>
    <div
      className="CrossLinks__linkWrapper CrossLinks__linkWrapper_hidden"
      key="CrossLinks_BODY_TAGS_FORD_SEDAN"
    >
      <Link
        className="CrossLinks__link"
        disableSpa={false}
        metrikaParams="downblock_links,FORD_C_MAX,link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&body_type_group=SEDAN"
        url="link/listing/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&body_type_group=SEDAN"
      >
        Ford C-MAX седан c пробегом
      </Link>
    </div>
  </div>
</div>
`;
